<resources>
    <string name="app_name">Pemandu</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //login and register
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_account">Create New Account</string>

    <!--<string name="sign_in">Sign In</string>-->
    <!--<string name="sign_out">Sign Out</string>-->

    //drawer
    <string name="profil">Profil</string>
    <string name="message">Message</string>
    <string name="manage">Manage</string>


    <string name="have_account">Already have account? Login</string>

    <string name="dont_have_account">Dont have account? Register</string>


    //appbar title
    <string name="find_tour_guide">Find Tour Guide</string>

    //databasenode
    <string name="node_users">users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
