<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_person"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message"/>
    </group>

    <item android:title="@string/manage">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_manage"
                android:title="sign in" />
        </menu>
    </item>

</menu>
