<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center_horizontal"/>
        <!--<ImageView
            android:id="@+id/imgRegisterAdd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:src="@drawable/ic_add_a_photo"
            />-->


<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/etRegisterEmail"
            android:layout_marginTop="15dp"/>
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:id="@+id/etRegisterName"
                android:layout_marginTop="15dp"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/etRegisterPassword"
                android:layout_marginTop="15dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:id="@+id/etRegisterConfirmPassword"
                android:layout_marginTop="15dp"/>
        </android.support.design.widget.TextInputLayout>
<!--
        <RadioGroup
            android:id="@+id/rgRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbRegisterTourist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tourist"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbRegisterTourguide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tour Guide"/>
        </RadioGroup>-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"
            android:textColor="#fff"
            android:padding="12dp"
            android:background="@drawable/custom_button_brown"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/have_account"
    android:gravity="center"
    android:id="@+id/txtRegisterToLogin"/>

    </LinearLayout>
</ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbRegister"
        android:layout_gravity="center"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="18dp"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>


















