<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahabatpnj.pemandu.account.LoginActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="55dp"
            android:padding="15dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_pemandu"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button_brown"/>
            <TextView
                android:id="@+id/toRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:padding="15dp"
                android:gravity="center"/>
        </LinearLayout>
</ScrollView>
    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/login_ProgressBar"
        android:layout_centerInParent="true"/>

    <include
        layout="@layout/app_bar_menu_slide"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
